--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "@types/react-helmet": "^5.0.14",
+    "@types/styled-components": "^4.4.0",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.18.4",
     "gatsby-image": "^2.2.34",
