--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "gatsby-plugin-typescript": "^2.1.20",
     "gatsby-source-contentful": "^2.1.64",
     "gatsby-source-filesystem": "^2.1.39",
-    "gatsby-transformer-remark": "^2.6.38",
     "gatsby-transformer-sharp": "^2.3.6",
+    "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -42,6 +42,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "gatsby-plugin-eslint": "^2.0.8",
+    "gatsby-transformer-remark": "^2.6.42",
     "prettier": "^1.19.1",
     "prettier-eslint": "^9.0.1"
   },
