--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^3.7.2"
   },
   "devDependencies": {
+    "@types/prismjs": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
     "babel-eslint": "^10.0.3",
