--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-helmet": "^5.0.14",
     "@types/styled-components": "^4.4.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^2.18.4",
+    "gatsby": "^2.15.8-page-data-404.16",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-graphql-codegen": "^2.0.1",
     "gatsby-plugin-manifest": "^2.2.30",
